8210457: JVM crash in ResolvedMethodTable::add_method(Handle) Summary: Add a function to call NSME in ResolvedMethodTable to replace deleted methods. Reviewed-by: sspitsyn